envoy.yaml
# envoy demo with golang extension enabled
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10001
    filter_chains:
    - filters:
      # - name: envoy.filters.network.set_filter_state
      #   typed_config:
      #     "@type": type.googleapis.com/envoy.extensions.filters.network.set_filter_state.v3.Config
      #     on_new_connection:
      #     - object_key: envoy.network.upstream_server_name
      #       format_string:
      #         text_format_source:
      #           inline_string: "%REQUESTED_SERVER_NAME%"
      # - name: envoy.filters.network.golang
      #   typed_config:
      #     "@type": type.googleapis.com/envoy.extensions.filters.network.golang.v3alpha.Config
      #     is_terminal_filter: false
      #     library_id: simple-network
      #     library_path: "/Users/duxin/cpp/src/envoy/examples/golang-network/lib/simple-network.so"
      #     plugin_name: simple-network
      #     plugin_config:
      #       "@type": type.googleapis.com/xds.type.v3.TypedStruct
      #       value:
      #         echo_server_addr: echo_service
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_protocol_options:
            header_key_format:
              stateful_formatter:
                name: preserve_case
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig
          http_filters:
          - name: envoy.filters.http.golang
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
              library_id: simple
              # library_path: /Users/duxin/cpp/src/envoy/examples/golang-http/lib/simple.so
              library_path: /Users/duxin/cpp/src/envoy/examples/golang-http/simple/envoy/libgolang.so
              plugin_name: simple
              plugin_config:
                "@type": type.googleapis.com/xds.type.v3.TypedStruct
                value:
                  prefix_localreply_body: "Configured local reply from go"
          # - name: envoy.filters.http.golang
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
          #     library_id: simple
          #     library_path: "/Users/duxin/cpp/src/envoy/examples/golang-http/lib/simple.so"
          #     plugin_name: simple
          #     plugin_config:
          #       "@type": type.googleapis.com/xds.type.v3.TypedStruct
          #       value:
          #         prefix_localreply_body: "Configured local reply from go"
          # - name: envoy.filters.http.http_dubbo_transcoder
          #   typed_config: 
          #     "@type": type.googleapis.com/envoy.extensions.filters.http.http_dubbo_transcoder.v3.HttpDubboTranscoder
          #     url_unescape_spec: ALL_CHARACTERS_EXCEPT_RESERVED
          #     request_validation_options:
          #       reject_unknown_query_parameters: true
          #     services_mapping:
          #     # todo 目前基于这个测试
          #     - name: "com.alibaba.nacos.example.dubbo.service.DemoService"
          #       version: "1.0.0"
          #       method_mapping:
          #         name: "sayName"
          #         path_matcher:
          #           match_pattern: "/mytest.service/sayHello"
          #           match_http_method_spec: ALL_POST
          #         parameter_mapping:
          #           - extract_key_spec: ALL_HEADER
          #             extract_key: name
          #             mapping_type: "java.lang.String"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/hello"
                route:
                  cluster: helloworld_service_cluster
              - match:
                  prefix: "/mytest.service"
                route:
                  cluster: local_service
                  upgrade_configs: 
                  - upgrade_type: "CONNECT"
                    connect_config: 
                      allow_post: true
          
  clusters:
  - name: helloworld_service_cluster
    type: STATIC
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http_protocol_options:
            header_key_format:
              stateful_formatter:
                name: preserve_case
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig
                  formatter_type_on_envoy_headers: PROPER_CASE
    load_assignment:
      cluster_name: helloworld_service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 5000
  - name: plainText
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED

  - name: local_service          
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin

    upstream_config:
      name: envoy.upstreams.http.tcp.golang
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.tcp.golang.v3alpha.Config
        library_id: simple-tcp-upstream
        library_path: /Users/duxin/cpp/src/envoy/examples/golang-tcp-upstream/simple/envoy/libgolang.so
        plugin_name: simple-tcp-upstream
        plugin_config:
          "@type": type.googleapis.com/xds.type.v3.TypedStruct
          value:
            prefix_localreply_body: "Configured local reply from gooo"
  
    # upstream_config:
    #   name: envoy.upstreams.http.dubbo_tcp
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.upstreams.http.dubbo_tcp.v3.DubboTcpConnectionPoolProto

    # upstream_config:
    #   name: envoy.upstreams.http.tcp
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.upstreams.http.tcp.v3.TcpConnectionPoolProto

    # for tcp conn pool multiplex
    # max_requests_per_connection: 10000000

    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 20880
        # - endpoint:
        #     address:
        #       socket_address:
        #         address: host.docker.internal
        #         port_value: 20881

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9902
